News Section Added

--- a/index.html
+++ b/index.html
@@ -63,7 +63,53 @@
              <h4>Dr. Muhammad Yunus</h4>
             <p>Chief Adviser of the People's Republic of Bangladesh</p>
             </div>
-            
+        </section>
+        <section class="news">
+            <h2 class="section_tilte">Recent News</h2>
+            <p class="section_description">The second satellite will be a Bangladesh Earth Observatory Satellite, he said while speaking at the sixth anniversary of the successful launching of the Bangabandhu-1, the country's first communication satellite at Dhaka Club on Sunday (12 May) night.The satellite will be used for various purposes, including monitoring natural disasters, managing agricultural resources, assessing environmental changes, etc.</p>
+            <div class="news_all">
+                <div class="news_1">
+                    <img src="assets/satelite.png" alt="">
+                    <div class="news_container">
+                        <h3 class="news_title">Bangladesh Launches New Satellite</h3>
+                        <div class="news_logo">
+                            <img src="assets/al-jazeera.png" alt="Logo Image">
+                        </div>
+                        <p class="news_data">Date: 05/01/2025  Time: 10.25 PM</p>
+                        <p class="news_description">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                            with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="news_btn">Read More</button>
+                    </div>
+                </div>
+
+                <div class="news_2">
+                    <img src="assets/satelite.png" alt="">
+                    <div class="news_container">
+                        <h3 class="news_title">Bangladesh Launches New Satellite</h3>
+                        <div class="news_logo">
+                            <img src="assets/al-jazeera.png" alt="Logo Image">
+                        </div>
+                        <p class="news_data">Date: 05/01/2025  Time: 10.25 PM</p>
+                        <p class="news_description">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                            with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="news_btn">Read More</button>
+                    </div>
+                </div>
+                <div class="news_1">
+                    <img src="assets/satelite.png" alt="">
+                    <div class="news_container">
+                        <h3 class="news_title">Bangladesh Launches New Satellite</h3>
+                        <div class="news_logo">
+                            <img src="assets/al-jazeera.png" alt="Logo Image">
+                        </div>
+                        <p class="news_data">Date: 05/01/2025  Time: 10.25 PM</p>
+                        <p class="news_description">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                            with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="news_btn">Read More</button>
+                    </div>
+                </div>
+
+            </div>
         </section>
     </main>
 </body>
