--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="social">
                 <a href=""><img src="assets/facebook.png" alt=""></a>
                 <a href=""><img src="assets/instagram.png" alt=""></a>
-                <a href=""></a>
+                <a href=""><img src="assets/x.png" alt=""></a>
             </div>
         </div>
     </main>
